fix cover image on mobile

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -244,9 +244,14 @@ main {
         .cover-image-container {
           width: 100%;
           padding: 20px;
-          background-image: url('/images/compost_02_cover.jpg');
-          background-size: cover;
-          aspect-ratio: 0.8283;
+          display: flex;
+
+          .image-bg {
+            background-image: url('/images/compost_02_cover.jpg');
+            background-size: cover;
+            aspect-ratio: 0.8283;
+            box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+          }
 
           @include small {
             height: 90%;
@@ -256,12 +261,12 @@ main {
 
           img {
             width: 100%;
+            aspect-ratio: 0.8283;
+            display: block;
 
             @include small {
               width: 300px;
               height: auto;
-              border: 1px solid $compost-green;
-              box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
             }
 
             @include desktop {
